GNOME Bugzilla – Bug 775609
More application crashes with atk-wrapper enabled
Last modified: 2019-05-01 22:09:50 UTC
Created attachment 341370 [details] [review] proposed fix Hello, As reported on https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=838778#31 , some widgets have their getAccessibleStateSet method sometimes return NULL. The attached patch should fix the subsequent crash.
Fixed by 9a4eb697e1c2027724d5b62b510b0644f99099a6 ("Check against getAccessibleStateSet returning null")