Check against getAccessibleStateSet returning null

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=775609